2006-10-18  Wouter Bolsterlee  <wbolster@gnome.org>

	* src/popup-commands.c: (background_download_completed):
	Remove unused type variable.

2006-10-17  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/Makefile.am:
	A lib/widgets/ephy-spinner-tool-item.c:
	A lib/widgets/ephy-spinner-tool-item.h:
	* lib/widgets/testspinner.c: (change_toolbar_style_cb),
	(change_toolbar_icon_size_cb), (spin_toolbar_spinner_cb), (main):
	* src/ephy-toolbar.c: (ephy_toolbar_update_spinner),
	(ephy_toolbar_constructor):

	Add EphySpinnerToolItem which encapsulates a spinner and automatically
	adapts its size to toolbar style changes, and use it in EphyToolbar.

2006-10-17  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_load),
	(ephy_spinner_cache_get_images), (ephy_spinner_get_type),
	(ephy_spinner_init), (ephy_spinner_new):
	* lib/widgets/ephy-spinner.h:

	Fix a crash after failing to get the spinner animation or rest icons.
	Derive EphySpinner from GtkWidget not GtkEventBox.

2006-10-15  Wouter Bolsterlee  <wbolster@gnome.org>

	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/MozDownload.cpp:
	* lib/ephy-file-helpers.c: (ephy_file_browse_to):
	* lib/ephy-file-helpers.h:
	* src/popup-commands.c: (save_property_url_completed_cb),
	(save_property_url):
	Automatically open a Nautilus window after downloading
	has finished. Fixes bug #138876, patch by Ed Catmur.

2006-10-15  Wouter Bolsterlee  <wbolster@gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:
	(ephy_bookmarks_editor_construct):
	Use full width for bookmarks search bar.
	Fixes bug #349349, patch by Diego Escalante Urrelo.

2006-10-15  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (update_has_smart_address):
	
	Fix unprotected call to ephy_node_remove_child. Bug #362063.

2006-10-15  Wouter Bolsterlee  <wbolster@gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:
	Implement EphyPasswordManagerIface.add to add stored